--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "notesrest_api",
   "version": "1.0.0",
   "description": "A rest api for note app",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Govind Singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
